made a little fix on the styling

--- a/style/global.css
+++ b/style/global.css
@@ -17,10 +17,12 @@ body {
   width: 320px;
   border: 3px solid rgba(128, 128, 128, 0.683);
   border-radius: 30px;
+  display: flex; /* Flex display to control layout */
+  flex-direction: column; /* Stack children vertically */
+  padding-bottom: 20px;
 }
 @media only screen and (max-width: 768px) {
   .first-rectangle {
-    height: 90vh;
     width: 270px;
   }
 }
@@ -70,15 +72,15 @@ body {
 .first-rectangle .second-rectangle {
   margin: 25px auto 0;
   padding: 10px;
-  height: 65vh;
+  height: 100%;
   width: 300px;
   border: 1px solid rgba(128, 128, 128, 0.683);
   border-radius: 15px;
   border-bottom: 0;
+  overflow-y: auto;
 }
 @media only screen and (max-width: 768px) {
   .first-rectangle .second-rectangle {
-    height: 60vh;
     width: 250px;
   }
 }
